made changes and debugged code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://kit.fontawesome.com/19f1f585e6.js">
-  <link rel="stylesheet" href="">
+  <script src="https://kit.fontawesome.com/19f1f585e6.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
   <title>CSS Drop-Down Menu</title>
 </head>
 <body>
@@ -34,5 +34,8 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
+  <header id="showcase">
+    <h1>Your Website Here</h1>
+  </header>
 </body>
 </html>
